- Added /hg stop <game name>
- Reorganization of stop, stopGame, start, startGame
- added getType() to Commands
- Improved Logging
- Made players that quit who are not playing not drop their inventory
- Spectators now just fly, and do not get creative
- Removed unneeded equals in HungerGame
- Changed "should-clear-inv" to "require-inv-clear"
- Better death handling to save a little CPU
- If a player uses /hg leave before the game starts, immediately redirects to /hg quit
- When a game is resumed from a pause, only players that were playing get put back in.
- When a game is auto-started, the last player to join does not receive the start messages

v0.4.3
- Fixed nullpointerexception in getSpectating() for real this time

v0.4.1
- Fixed nullpointerexception in getspectating()

v0.4
- Might have fixed the games not saving
- Fixed a nullpointerexception
- Basic spectating
- Changed most player keys to String keys
- Might have fixed permissions. (again)
- Added specific block change listener. Can be internal, LogBlock, or HawkEye (HawkEye is not currently implements) requests are open for more
- Added a Restock command to restock all chests in a game

v0.3.1
- Logging stuff
- register forgotten BlockListener
- Can-teleport
- use-command
- Early world reseting in the form of full world
- /hga add game <game name>' now instructs user to add spawnpoints after creating it.
- Fixed players still being able to join even under conditions where they shouldn't be able to
- Added option to allow chests to be automatically added and filled at first open

v0.3
- Clearing inventories is now optional
- Fixed winner not being recognized
- Add quit command.
- Cleanup
- Lives cleanup
- Rejoin/Join/Leave cleaned up
- Added Metrics
- Use equalsIgnoreCase, not equals for commands
- all-vote is in
- block interact/place/break options
- Added an unimplemented Logging class
- Auto-vote
- Made quitting before a game starts remove you from the games stats