@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.2.5-R3.0</version>
+            <version>1.2.5-R4.0</version>
             <type>jar</type>
         </dependency>
         <dependency>
